--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,8 @@
         <nav>
             <ul>
                 <li class="img"><img src="/mainImage/Spotify.png" alt="Spotify Image">Spotify</li>
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li class="home"><a href="#Home">Home</a></li>
+                <li class="home"><a href="#about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -28,81 +28,67 @@
             <div class="songList">
                 <h1 class="name">Welcome To Spotify</h1>
                 <div class="songItemContainer">
+
                     <div class="songItem">
-                        <img src="/Cover_Image/1.jpg" alt="1">
+                        <img src="  " alt="1">
                         <span class="songName">Let me Love You</span>
-                        <span class="songList"><span class="timeStamp">05:34 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">05:34 <i id = "1" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/2.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">Perfect - One Direction</span>
-                        <span class="songList"><span class="timeStamp">03:49 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">03:49 <i id = "2" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/3.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">Night Changes - One Direction</span>
-                        <span class="songList"><span class="timeStamp">03:52 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">03:52 <i id = "3" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/4.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">What's make beautiful - One Direction</span>
-                        <span class="songList"><span class="timeStamp">03:21 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">03:21 <i id = "4" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/5.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">Steal My Girl - One Direction</span>
-                        <span class="songList"><span class="timeStamp">03:48 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">03:48 <i id = "5" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/6.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">Story of my life - One Direction</span>
-                        <span class="songList"><span class="timeStamp">04:08 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">04:08 <i id = "6" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/6.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">Sorry - Justin Beiber</span>
-                        <span class="songList"><span class="timeStamp">05:34 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">05:34 <i id = "7" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/7.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">Lonely - Justin Bieber, Benny Blanco</span>
-                        <span class="songList"><span class="timeStamp">03:19 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">03:19 <i id = "8" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
-                    <div class="songItem">
-                        <img src="/Cover_Image/8.jpg" alt="1">
-                        <span class="songName">Attention - Charlie Puth</span>
-                        <span class="songList"><span class="timeStamp">03:34 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
-                    </div>
+        
 
                     <div class="songItem">
-                        <img src="/Cover_Image/9.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">One Call Away - Charlie Puth</span>
-                        <span class="songList"><span class="timeStamp">03:20 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">03:20 <i id = "9" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
 
                     <div class="songItem">
-                        <img src="/Cover_Image/10.jpg" alt="1">
+                        <img src="" alt="1">
                         <span class="songName">See You Again - Charlie Puth</span>
-                        <span class="songList"><span class="timeStamp">03:50 <i
-                                    class="far fa-1x fa-play-circle"></i></span></span>
+                        <span class="songList"><span class="timeStamp">03:50 <i id = "10" class="far songItemPlay fa-1x fa-play-circle"></i></span></span>
                     </div>
                 </div>
             </div>
@@ -113,13 +99,12 @@
             <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
             <div class="icon">
                 <!-- font  -->
-                <i class="fas fa-3x fa-step-backward"></i>
+                <i class="fas fa-3x fa-step-backward" id="previous"></i>
                 <i class="far fa-3x fa-play-circle" id = "masterPlay"></i>
-                <i class="fas fa-3x fa-step-backward"></i>
-
+                <i class="fas fa-3x fa-step-forward" id="next"></i>
             </div>
             <div class="songInfo">
-                <img src="/Cover_Image/playing.gif" alt="" id = "gif"> Let Me Love You : justin Beiber
+                <img src="/Cover_Image/playing.gif" alt="" id = "gif"> <span id="masterSongName">Let me love You</span>
             </div>
         </div>
 
